--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,20 @@
     @apply bg-transparent border-solid border font-light text-sm text-gray-300 p-2 grow w-96 rounded-lg border-gray-200 hover:border-gray-300 focus:outline-none focus:border-2;
   }
 
+  .h1 {
+    @apply text-gray-300 text-left font-semibold text-4xl;
+  }
+
+  .h2 {
+    @apply text-gray-300 text-left font-bold text-2xl;
+  }
+
   .h3 {
     @apply text-sm text-left text-gray-300 opacity-80 font-normal pb-1;
+  }
+
+  .plainText {
+    @apply text-gray-200 font-light text-sm pt-2;
   }
 
   .buttonBack {
