--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   }
 
   .h2 {
-    @apply text-gray-300 text-left font-bold text-2xl;
+    @apply text-gray-300 text-left font-bold text-xl;
   }
 
   .h3 {
